Sun Jan 22 02:34:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Log_i.cpp:
        * orbsvcs/orbsvcs/Log/Log_i.h:

          Added a new member variable to store the log channel's object
          reference.  Until now, the code was calling _this() each time
          the reference was needed.  Not only was this inefficient (the
          reference is a field of each of the the structures used for log
          notification events, so it's needed relatively frequently), but
          also it resulted in the servant being activated in the RootPOA,
          so a transient rather than persistent IOR was returned.

        * orbsvcs/orbsvcs/Log/LogNotification.cpp:

          The event's logref field wasn't being set in state_change() and
          threshold alarm(), even though the log channel object reference
          was being passed to the methods.

Sat Jan 21 01:56:30 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log_i.cpp:

          Call reset_capacity_alarm_threshold () in set_log_full_action()
          if the value is changed.

          If the log full action is DsLogAdmin::halt, capacity threshold
          alarms are triggered when the size of a log exceeds one if its
          capacity alarm thresholds; if the log full action is ::wrap,
          capacity threshold alarms are triggered "as if coupled to a
          guage that counts from zero to the highest capacity threshold
          value".  The specification doesn't describe required behavior
          when changing from one to the other.  Since the recordkeeping
          needed for each option is so different, resetting may be the
          only realistic option --- at least that way we won't be using
          one set of data for the other.

        * orbsvcs/orbsvcs/Log_i.cpp:

          The current revision of the log service spec is inconsistent
          whether an AttributeValueChange event should generated only if